--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "pentagone2launcher",
   "productName": "Pentagone II Launcher",
-  "version": "1.0.4",
+  "version": "1.0.3",
   "description": "Pentagone II Launcher",
   "main": "index.js",
   "scripts": {
     "test": "electron .",
-    "buildWin": "electron-builder build",
-    "buildMac": "electron-builder build -m",
-    "buildLin": "electron-builder build -l"
+    "buildWin": "electron-builder build -w",
+    "buildMac": "electron-builder build -m"
   },
   "build": {
     "appId": "fr.pentagone2.launcher",
@@ -17,7 +16,12 @@
       "oneClick": true,
       "perMachine": true
     },
-    "icon": "build/icon.ico"
+    "icon": "build/icon.ico",
+    "mac": {
+      "target": "dmg",
+      "icon": "build/icon.icns",
+      "minimumSystemVersion": "10.11"
+    }
   },
   "author": "Pentagone II",
   "license": "GNU AGPLv3",
@@ -25,12 +29,14 @@
     "electron": "^12.0.5",
     "electron-builder": "^22.10.5"
   },
+
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "axios": "^0.21.1",
+    "decompress": "^4.2.1",
     "http": "0.0.1-security",
     "minecraft-launcher-core": "^3.16.2",
     "minecraft-server-util": "^3.5.1",
-    "unzipper": "^0.10.11"
+    "nodejs-file-downloader": "^4.7.1"
   }
 }
