--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "pentagone2launcher",
   "productName": "Pentagone II Launcher",
-  "version": "1.1.0",
+  "version": "1.0.5",
+  "internalVersion": "13111110.4",
   "description": "Pentagone II Launcher",
   "main": "index.js",
   "scripts": {
@@ -29,7 +30,6 @@
     "electron": "^12.0.5",
     "electron-builder": "^22.10.5"
   },
-
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "axios": "^0.21.1",
